--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@ const color = colorThief.getColor(document.querySelector('img'));--></code></pre
       <section id="faq">
         <h2>FAQ</h2>
 
-        <h3>Do I have to wait for the image to be loaded?</h3>
+        <h3>Do I have to wait for the image to load?</h3>
 
-        <p>Yes. If you see an error that reads: <code>Cannot read property '0' of null</code>, it is likely that the image had not finished loading. When using ColorThief in the browser, you need to wait for the image to be loaded before calling <code>getColor()</code> or <code>getPalette()</code>. To do this, run the ColorThief methods in the image's <em>load</em> event listener.</p>
+        <p>Yes. If you see an error that reads: <code>Cannot read property '0' of null</code>, it is likely that the image had not finished loading when you passed it to <code>getColor()</code> or <code>getPalette()</code>.</p>
 
 <pre><code class="prism language-javascript line-numbers"><!--// RISKY 🙀
 const colorThief = new ColorThief();
@@ -215,13 +215,30 @@ colorThief.getColor(img);--></code></pre>
 
 <br>
 
-<pre><code class="prism language-javascript line-numbers"><!--// MUCH BETTER 😎
+<pre><code class="prism language-javascript line-numbers"><!--// GOOD 👍
 const colorThief = new ColorThief();
 let img = document.querySelector('img');
 
-img.addEventListener('load', (event) => {
+if (img.complete) {
   colorThief.getColor(img);
-})--></code></pre>
+} else {
+  image.addEventListener('load', function() {
+    colorThief.getColor(img);
+  });
+}--></code></pre>
+
+        <h3>Does it work if the image is hosted on another domain?</h3>
+
+        <p>Yes. If you are seeing an error that reads: <code>Failed to execute 'getImageData' on 'CanvasRenderingContext2D': The canvas has been tainted by cross-origin data.</code>, then you are running into a <em>cross-origin resouce sharing (CORS)</em> issue. Two things to check:</p>
+
+        <ol class="guide-steps">
+          <li><strong>CORS policy on the server.</strong> Is the server hosting the image properly configured? Make sure your requesting domain is whitelisted in the <code>Access-Control-Allow-Origin</code> header.</li>
+          <li><strong>crossorigin attr</strong>. The HTML image element must be given a <em>crossorigin</em> attribute.
+<pre><code class="prism language-xml"><!--<img src="https://aws.com/s3/image.jpeg" crossorigin="anonymous" />--></code></pre>
+          </li>
+        </ol>
+
+        <p>If you're still a little confused, I'd recommend spending some time on the <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS">MDN page covering CORS</a>. CORS is a complex topic</p>
 
         <h3>How do I get hex values?</h3>
         <p>The ColorThief methods return colors as an array of three integers representing <span style="font-family: var(--code-font); color: #ff4f30; font-weight: var(--bold)">red</span>, <span style="font-family: var(--code-font); color: #00a91c; font-weight: var(--bold)">green</span>, and <span style="font-family: var(--code-font); color: #00a2ff; font-weight: var(--bold)">blue</span> values. If you are looking to use the output in CSS, you can do that using the rgb format: <code>color: rgb(102, 51, 153)</code>. If you do need to convert to hex, you can use the following function:</p>
