refactor: Use colorthief dep

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ rgbToHex(102, 51, 153); // #663399--></code></pre>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/plugins/unescaped-markup/prism-unescaped-markup.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
+  <script src="/node_modules/colorthief/dist/color-thief.umd.js"></script>
 
   <script src="./js/demo.js"></script>
 
