build: Deploy to dreamhost with sftp

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ if (img.complete) {
 
         <p>If you are testing the script locally in a web browser, you might see the following error: <code>Access to script at 'file://...' from origin 'null' has been blocked by CORS policy</code>. This is because the browser restricts direct access to the filesystem.</p>
 
-        <p>To get around this, you can set up a minimal server to host the files. One option is <a href="https://github.com/http-party/http-server">http-server</a>. To run this on demand without installing it as a proejct dependency, you can use the <code>npx</code> command:</p>
+        <p>To get around this, you can set up a minimal server to host the files. One option is <a href="https://github.com/http-party/http-server">http-server</a>. To run this on demand without installing it as a project dependency, you can use the <code>npx</code> command:</p>
 <pre><code class="prism language-xml line-numbers">$ npx http-server</code></pre>
 
         <p>Now you can visit <em>http://localhost:8080</em> to view your server.</p>
