add goog analytics 4

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/prism.css">
+
 </head>
 <body>
 
@@ -422,5 +423,16 @@ rgbToHex(102, 51, 153); // #663399</code></pre>
   </script>
 
   <script src="./js/index.js"></script>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4MX99CPP55"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-4MX99CPP55');
+  </script>
+
 </body>
 </html>
