--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ colorThief.getColor(img);</code></pre>
 
 <br>
 
-<pre><code class="prism language-javascript line-numbers"><// BETTER 👍
+<pre><code class="prism language-javascript line-numbers">// BETTER 👍
 const colorThief = new ColorThief();
 const img = document.querySelector('img');
 
@@ -290,7 +290,7 @@ const img = new Image();
 
 img.addEventListener('load', function() {
   colorThief.getColor(img);
-};
+});
 
 let imageURL = 'https://i.pinimg.com/564x/3b/b4/9b/3bb49bd2a7f86e29b5670da1fe03fee4.jpg';
 let googleProxyURL = 'https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&refresh=2592000&url=';
